# Nexus-IDE

./: .config  CONTRIBUTING.md  HOSTING_DEPLOYMENT_GUIDES.md  LICENSE  README.md  SESSION_SUMMARY.md  capacitor.config.json  capacitor.config.ts  index.html  main.py  manifest.json  metadata.json  package-lock.json  package.json  script.js  server.ts  style.css  sw.js  vite.config.ts
.github/workflows/: android.yml  gh-pages.yml  nextjs.yml  pages.yml  publish.yml  release.yml
Beta V4 testing/: index.html
Beta V4 testing/public/: manifest.json  sw.js
android/: variables.gradle
android/app/: build.gradle
assets/: LinuxTerminal-BDEXZvuQ-v437.js  ThemeStudio-wphGH19C-v437.js  WebContainerTerminal-BsNTtwri-v437.js  index-7UZoQdxd-v437.css  index-BqxuYeTw.css  index-CnoJJtYx-v437.css  index-DSrJY0y--v437.js  index-DbpMrlFM.js  index-LSR8y0OD.css  index-PyEwgIux-v437.js  index-sg-v287u.js
cli/: nexus.js
cli/tui/: index.js
download/: nexus-features-raw.json  nexus-ide-features.json  nexus-ide-main.json  nexus-ide-src.json  nexus-package.json  nexus-readme.json  nexus_ide_analysis.py
public/: manifest.json  sw.js
src/: App.tsx  EXPLORING.md  FEATURES.md  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AIAssistant.tsx  ActivityBar.tsx  AirplaneModeBanner.tsx  AuditLog.tsx  BeginnerUILayout.tsx  CICDPipeline.tsx  CodeReview.tsx  CollaborationView.tsx  CommandPalette.tsx  DebugView.tsx  DependencyGraph.tsx  DiffEditor.tsx  Editor.tsx  EnvironmentManager.tsx  ExtensionsView.tsx  GithubView.tsx  (+30 more)
(+35 files in other folders)
